# arduino_from_scratch

./: .gitignore  CMakeLists.txt  README.md
include/: constant.h  io.h
include/io/: io_328p.h
src/: io.c  main.c
